--- a/src/Pages/Home/Product/Product.css
+++ b/src/Pages/Home/Product/Product.css
@@ -1,15 +1,15 @@
 .product {
-    border: 1px solid #4646ac;
+    border: 1px solid #000000;
     border-radius: 10px;
     padding-bottom: 10px;
-    text-align: center;
-    background-color: #4c22557d;
+    background-color: #3bf7267d;
     padding: 10px;
 }
 
+
 .images {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 400px;
     border-radius: 10px;
     margin-top: 10px;
 }
@@ -17,12 +17,14 @@
 .button {
     border: none;
     width: 200px;
-    background-color: #462d9a9b;
+    background-color: #9f0202;
     color: #ffffff;
     cursor: pointer;
     padding: 10px;
     border-radius: 5px;
+    margin-left: 100px;
+    
 }
 .button:hover{
-    box-shadow: 1px 1px 5px;
+    box-shadow: 1px 1px 5px #000000;
 }
